--- a/Dicee-iOS13/Base.lproj/Main.storyboard
+++ b/Dicee-iOS13/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                     <color key="titleShadowColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="rollButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NqS-TN-YXV"/>
+                                    <action selector="onRollButtonPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NqS-TN-YXV"/>
                                 </connections>
                             </button>
                         </subviews>
